@@ -1,3 +1,9 @@
+	Alpha r54
+- Added item tooltips to all tabs
+- Added "Resell" auction searcher
+- Restored pre 0.3.0 "Hide filter" behavior
+- The "Profit" column in the search tab now orders by decreasing bid profit on "ascending" state, and by decreasing buy profit on "descending" state
+
 	Alpha r53
 - Added "Extended" auction searcher
 - Testing item tooltips (search tab only)
